syntax = "proto3";

option java_multiple_files = true;
option java_package = "ProjectManager";
option java_outer_classname = "projectManagerSchedule";

service FindingWorkers {
	rpc TaskFinding(taskSpecifications) returns (stream taskMatch){}
	//rpc taskFinding (stream TaskSpecifications) returns (stream TaskMatch){}
	rpc TaskRequest (stream taskMatch) returns (success){}
	//rpc extraWorkerNeeded (stream TaskSpecifications) returns (Success){}
	//rpc changes (stream TaskSpecifications) returns (TaskMatch){}

}

message taskSpecifications {
	string project_number = 1;
	string task = 2;
	float number_hours = 3;
	int64 start_day = 4;
	int64 start_month = 5;
	int64 start_year =  6;
	int64 milestone_day = 7;
	int64 milestone_month = 8;
	int64 milestone_year = 9;
}

message taskMatch {
	int64 working_day = 1;
	int64 working_month = 2;
	int64 working_year =  3;
	float number_of_hours = 4;
	string card_number = 5;
}

message success {
	string task = 1;
}

/*
message WorkerRequest {
string ProjectNumber = 1;
string TaskName = 2;
string TaskDescription = 3;
int64 Date = 4;
float Hours = 5;
string CardNumber = 6;
}

message Success {
	string message = 1;
}
*/